implement 10mb (currently hardcoded) page cache. order documents on "Details" screen by age. fix file associations when using tab state cache on MacOS.